k8s/admin-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: admin-server
  name: admin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin-server
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/spring-petclinic-microservices-default: "true"
        io.kompose.service: admin-server
    spec:
      containers:
        - image: springcommunity/spring-petclinic-admin-server
          name: admin-server
          ports:
            - containerPort: 9090
              hostPort: 9090
              protocol: TCP
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
