k8s/config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: config-server
  name: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: config-server
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/spring-petclinic-microservices-default: "true"
        io.kompose.service: config-server
    spec:
      containers:
        - image: springcommunity/spring-petclinic-config-server
          livenessProbe:
            exec:
              command:
                - curl
                - -I
                - http://config-server:8888
            failureThreshold: 10
            periodSeconds: 5
            timeoutSeconds: 5
          name: config-server
          ports:
            - containerPort: 8888
              hostPort: 8888
              protocol: TCP
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
