k8s/discovery-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: discovery-server
  name: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: discovery-server
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/spring-petclinic-microservices-default: "true"
        io.kompose.service: discovery-server
    spec:
      containers:
        - image: springcommunity/spring-petclinic-discovery-server
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://discovery-server:8761
            failureThreshold: 10
            periodSeconds: 5
            timeoutSeconds: 3
          name: discovery-server
          ports:
            - containerPort: 8761
              hostPort: 8761
              protocol: TCP
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
