k8s/prometheus-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: prometheus-server
  name: prometheus-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus-server
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/spring-petclinic-microservices-default: "true"
        io.kompose.service: prometheus-server
    spec:
      containers:
        - image: vanisetti/spring-petclinic-microservices-prometheus-server:latest
          name: prometheus-server
          ports:
            - containerPort: 9090
              hostPort: 9091
              protocol: TCP
          resources:
            limits:
              memory: "268435456"
      restartPolicy: Always
