k8s/vets-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: vets-service
  name: vets-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vets-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/spring-petclinic-microservices-default: "true"
        io.kompose.service: vets-service
    spec:
      containers:
        - image: springcommunity/spring-petclinic-vets-service
          name: vets-service
          ports:
            - containerPort: 8083
              hostPort: 8083
              protocol: TCP
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
